--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Estudando/01 - Efeito Digitando na Tela/css/style.css
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Estudando/01 - Efeito Digitando na Tela/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Special+Elite&display=swap');
+
 body{
     padding: 0;
     margin: 0;
@@ -5,23 +7,40 @@ body{
 
 .first-page{
     padding: 0;
-    margin-top: 0px;
     height: 100vh;
     width: 100vw;
-    background-color: #444444;
+    background-color: #252525;
     background-size: cover;
+    position: absolute;
 }
 
-.title-first-page{
+.page-head{
+    font-family: 'Special Elite', cursive;
+    color: #ebebeb;
+    position: absolute;
+    top: 40%;
+    left: 45%
+}
+
+.page-subtitle{
+    margin-top: -15px;
     padding: 0;
-    margin: 0;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 3em;
-    color: #fefefe;
 }
 
-#fptitle{
-    height: 50vh;
-    width: 50vw;
+.page-title::after{
+    color: #ebebeb;
+     content: '|';
+     margin-left: 5px;
+     opacity: 1;
+     display: inline-block;
+     animation: blink-cursor .7s infinite;
 }
 
+@keyframes blink-cursor{
+    0%, 100%{
+        opacity: 1;
+    }
+    50%{
+        opacity: 0;
+    }
+}
