--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Estudando/07 - Consumindo APIs/Exemplo/Trabalhando com JSON/style.css
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Estudando/07 - Consumindo APIs/Exemplo/Trabalhando com JSON/style.css
@@ -8,8 +8,8 @@ body{
 
 a{
     text-decoration: none;
-    color: #ebebeb;
-    background-color: #b56a7a;
+    color: #404040;
+    background-color: #85c9d0;
     padding: 5px;
 }
 
@@ -32,6 +32,23 @@ section{
 }
 
 article{
-    border: #b56a7a 1px solid;
+    border: #85c9d0 1px solid;
     padding: 15px;
+}
+
+h1, h2{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+h1{
+    font-size: 3rem;
+    text-transform: uppercase;
+}
+
+@media(max-width: 900px){
+    
+    section{
+        display: block;
+        margin-top: 10px;
+    }
 }
