Ajustes no estilo do link: underline e sem itálico.

--- a/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/curriculo/css/style.css
+++ b/Projetos e Códigos/00 - Revisão HTML CSS e Site Portfolio/Site Portfolio/curriculo/css/style.css
@@ -103,12 +103,12 @@ body.light-mode{
 
 /*--------------------------------------*/
 
-a:link{
-    text-decoration: none;
+.arrow-back{
+    font-size: 2rem;
 }
 
-.back-to-home{
-    font-size: 2.5em;
+.back-home a{
+    text-decoration: none;
 }
 
 .bold, .section-subtitle{
