--- a/Projetos e Códigos/06 - Canvas/02 - Tutoriais da Web/01 - PieChart/css/style.css
+++ b/Projetos e Códigos/06 - Canvas/02 - Tutoriais da Web/01 - PieChart/css/style.css
@@ -5,7 +5,6 @@ body, p{
 
 body{
     background-color: #404040;
-    color: #ebebeb;
 }
 
 .container{
@@ -37,5 +36,6 @@ canvas{
 }
 
 .text p:first-child{
-    font-size: 60px;
+    font-size: 4.5rem;
+    padding-bottom: 10px;
 }
